#summary Changelog for all changes since the fork

= Changes =
== Version 1.71 ==
  * Moved lots of stuff to the background so the UI should be more responsive
  * Fixed several bugs introduced with the christmas-update
  
== Version 1.7 ==
  * Completely rewrote DB-Adapters for lists, cursors are now managed by the system which should reduce the number of FCs
  * Added support for themes, initially there are two dark (dark and completely black) and two light (light and white) themes available
  * More lightweight operation when moving between articles/feeds
  * Make panels in two-pane layout resizable (divider can be moved)
  * Fixed some bugs in handling of labels but there are still server-side bugs
  * Fixed bug #197: App hangs when "mark all as read" is hit
  * Fixed bug #161: "Fresh articles" display all unread articles
  * Fixed bug #143: New preference for "Online only when on WiFi"
  * Fixed bug #204: some preferences don't update immediately
  * Scroll headlines when using two-pane layout and opening next article
  * Add warning dialog before marking several or all feeds as read 
  * Security-Bugfix for fragment vulnerability

== Version 1.63 ==
  * Enabled zoom controls again. If they are enabled in preferences the gestures in article-view (swipe and scroll up/down to show/hide ActionBar) won't work anymore!
  * Make frames of tablet-layout resizable 

== Version 1.62 (1) ==
  * Fixed some rotation related issues, app should not crash anymore but it might display wrong stuff sometimes
  * Fixed crash when entering preferences on some old devices
  * Fixed crash with foreign key error on article deletion
  * Add information about articles last sync time to "about" dialog
  * Fixed Swipe
  * Several bugfixes

== Version 1.61 (1) ==
  * Added preference to disable split-view (swipe does not work yet)
  * Bugfixes

== Version 1.6 ==
  * Added two-pane tablet-layout
  * Added preference to set some preference based on which wifi-network is currently used 