@@ -4,6 +4,7 @@
 == Version 1.71 ==
   * Moved lots of stuff to the background so the UI should be more responsive
   * Fixed several bugs introduced with the christmas-update
+  * Fixed bug that slowed down article fetching 
   
 == Version 1.7 ==
   * Completely rewrote DB-Adapters for lists, cursors are now managed by the system which should reduce the number of FCs
